2012-01-07  Ulrich Drepper  <drepper@gmail.com>

	* shlib-versions: Remove entries for ports architectures.

	* elf/tls-macros.h: Remove support for Alpha and IA-64.  Should be in
	files in ports.
	* elf/stackguard-macros.h: Remove support for IA-64.
	* elf/tst-auditmod1.c: Likewise.
	* sysdeps/generic/ldsodefs.h: Likewise.

	* sysdeps/unix/sysv/linux/configure.in: Ports should define
	libc_cv_gcc_unwind_find_fde and arch_minimum_kernel in their
	configure files.

	[BZ #13552]
	* configure.in: Remove --enable-omitfp support.
	* FAQ.in: Adjust.
	* config.make.in: Likewise.
	* Makeconfig: Likewise.
	* manual/install.texi: Likewise.

	In case anyone cares, the IA-64 architecture could move to ports.
	* sysdeps/ia64/*: Removed.
	* sysdeps/unix/sysv/linux/ia64/*: Removed.
	* sysdeps/unix/sysv/linux/kernel-features.h: Remove IA-64 support.

	[BZ #13555]
	* configure.in: Remove entries for unsupported architectures.

	[BZ #13533]
	* iconv/gconv_builtin.h: Use CHAR16 for the char16_t conversions.
	* iconv/gconv_simple.c: Rename char16_t routines.  Add char16_t<->utf8
	routines.
	* iconv/gconv_int.h: Adjust prototypes for char16_t routines.
	* iconv/iconv_prog.c: Recognize CHAR16 as internal name.
	* wcsmbs/c16rtomb.c: Fix a few problems.  Disable all the code and
	fall back to using wcrtomb.
	* wcsmbs/mbrtoc16.: Fix implementation to handle real conversions.
	* wcsmbs/wcsmbsload.c: Make char16 routines optional.  Adjust for
	renaming.
	* wcsmbs/Makefile (tests): Add tst-c16c32-1:
	* wcsmbs/tst-c16c32-1.c: New file.

	* wcsmbs/wcrtomb.c: Use MB_LEN_MAX instead of MB_CUR_MAX for sizing
	local variable.

	* libio/stdio.h: Do not declare gets at all for _GNU_SOURCE.

	* elf/tst-unique3.cc: Add explicit declaration of gets.
	* elf/tst-unique3lib.cc: Likewise.
	* elf/tst-unique3lib2.cc: Likewise.
	* elf/tst-unique4.cc: Likewise.

	* string/test-strcpy.c (do_one_test): Fix format string for WIDE use.

2012-01-06  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13566]